<resources>
    <string name="app_name">ParseInstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="picture">picture</string>
    <string name="instagram">Instagram</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">email address</string>
    <string name="phone_number">phone number</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <string name="home">Home</string>
    <string name="imagepost">imagePost</string>
</resources>
