<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/instaLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight=".2"
        android:adjustViewBounds="false"
        android:contentDescription="@string/logo"
        android:cropToPadding="true"
        android:fitsSystemWindows="false"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <ImageView
        android:id="@+id/imageToPost"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/picture"
        tools:srcCompat="@drawable/camera_shadow_fill"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <EditText
        android:inputType="text"
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonCaptureImage"
        style="@style/RectangleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/buttonSubmit"
        style="@style/RectangleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/submit" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_out"
        android:textAlignment="center" />

</LinearLayout>
</ScrollView>