<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:drawable="@drawable/instagram_home_outline_24"
        android:icon="@drawable/instagram_home_outline_24"
        android:state_checked="true"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/instagram_new_post_outline_24"
        android:title="@string/compose"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/instagram_user_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>